[SIX-54] Correction for Footer spacing issues

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2268,7 +2268,7 @@
 
 		float: none;
 
-		margin-bottom: 50px !important;
+		//margin-bottom: 50px !important;
 
 	}
 
